--- a/Practice iOS/Application/Info.plist
+++ b/Practice iOS/Application/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
+	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>앨범 접근 권한을 허용하시겠습니까?</string>
 	<key>UIApplicationSceneManifest</key>
